unpackaged/main/default/objects/Case/fields/Important_info__c.field-meta.xml
<CustomField>
    <fullName>Important_info__c</fullName>
    <label>Important info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>