unpackaged/main/default/objects/Case/fields/Pre_call_details__c.field-meta.xml
<CustomField>
    <fullName>Pre_call_details__c</fullName>
    <label>Pre-call details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>